# iree-torch

./: .gitignore  .gitmodules  README.md  requirements.txt  setup.py  torchscript_e2e_config.py  torchscript_e2e_main.py
.github/workflows/: test_examples.yml  test_nightly_packages.yml
examples/: bert.ipynb  bert.py  llama.py  regression.py
examples/embedded/: README.md  embedded.c  embedded.py  embedded_test.mlir
examples/falcon/: dtype-fix.diff  falcon-7b-quantizer.py  falcon-int4.py  falcon-int8.py  falcon.py  setup.sh  uint4-fix.diff
examples/native_training/: CMakeLists.txt  README.md  native_training.py
python/iree_torch/: __init__.py
tools/: e2e_main.py  e2e_test.sh  torchscript_e2e_main.py  torchscript_e2e_test.sh
torchdynamo_poc/: README.md  TorchDynamo Demo.ipynb  bert.py  requirements.txt  resnet18.py  torchbench.py  torchdynamo_test.py  utils.py
